--- a/src/Fleetique/Fleetique/Views/HomeView.xaml
+++ b/src/Fleetique/Fleetique/Views/HomeView.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="WpfBoilerPlate.Views.HomeView"
+﻿<Window x:Class="Fleetique.Views.HomeView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:local="clr-namespace:WpfBoilerPlate.Views"
+        xmlns:local="clr-namespace:Fleetique.Views"
         mc:Ignorable="d"
         Title="Home" Height="450" Width="800"
         Loaded="Window_Loaded">
@@ -83,7 +83,11 @@
             <md:Card 
                 Margin="10"
                 Background="AliceBlue">
-               
+                <ComboBox x:Name="CarrierCombo"
+                          ItemsSource="{Binding Carriers}" SelectedItem="{Binding SelectedCarrier}"
+                          Style="{DynamicResource MaterialDesignDataGridComboBox}">
+                    
+                </ComboBox>
             </md:Card>
         </Grid>
     </Grid>
